manifests/apps/adventofcode-app/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: network-policy
  namespace: adventofcode-app
spec:
  endpointSelector:
    matchLabels:
      app: adventofcode-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-system
  egress:
    - toFQDNs:
        - matchName: "adventofcode.com"
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
          rules:
            dns:
              - matchPattern: "*"
